# aws-portfolio-website

./: .gitignore  Pulumi.yaml  README.md  __main__.py  add-pulumi-section.sh  pyproject.toml
docs/: PORTFOLIO_GITHUB_SETUP.md  PORTFOLIO_SETUP_COMPLETE.md
infrastructure/: __init__.py  cloudfront.py  s3.py
website/: 404.html  about.html  contact.html  index.html  projects.html
website/css/: style.css
website/images/: README.txt
website/js/: main.js
